spire-oidc-provider/oidc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-oidc
  namespace: spire
spec:
  ports:
    - name: oidc
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: oidc-discovery-provider
